1999-02-23  Pavel Machek  <pavel@artax.karlin.mff.cuni.cz>

	* gtk/gtkentry.c (gtk_entry_finalize): trivial bugfix

Mon Feb 22 19:06:30 1999  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkdnd.c (xdnd_send_*): When sending events to
	 windows with a proxy, set the window field in the
	 sent event to the original window, not to the proxy.
	 (This gives consistency with Motif, and also provides
	  information to the destination that it wouldn't have 
	  otherwise).
	
	* gtk/gtkdnd.c: Fixed some refcount leaks for windows.

	* gdk/gdkdnd.c (xdnd_send_xevent): When sending
	 Xdnd event to the root window, set the event mask
	 to ButtonPressMask. Hopefully, this should give us 
	 compatibility with kfm, if it uses the Qt style
	 of root window drops.

Mon Feb 22 08:45:10 GMT 1999 Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml:
	  - Complete the ProgressBar API
	  - Fix the CList example code

	* examples/clist/clist.c, examples/progressbar/progressbar.c:
	   Update from tutorial

Sun Feb 21 17:44:52 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/testgtkrc: Removed check-y/check-n backgrounds -
	 the effect looked like a bug.

Sun Feb 21 17:14:44 1999  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkwindow.c (gdk_window_set_geometry_hints): Always
	 set the max width or height to at least 1, since 0 
	 triggers bugs in some window managers. (The window 
	"pops out" of the frame in fvwm)

Sun Feb 21 16:16:22 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkscrolledwindow.c gdk/gdkfont.c gdk/gdkim.c:
	 Changed warnings from g_message() to g_warning().

	* gdk/gdkim.c (gdk_ic_destroy): Changed g_print
	 to g_message within GDK_NOTE()

	* gtk/gtkcolorsel.c  gtk/gtkhandlebox.c:
	 Removed some leftover debugging printfs.

Sun Feb 21 15:59:55 1999  Owen Taylor  <otaylor@redhat.com>

	* gdk/MwmUtil.h gdk/gdkwindow.c: Account for the
	fact that Xlib expects format == 32 to be a long,
	even on 64-bit architectures.
	
	[ patch from George Lebl (jirka@5z.com) ]
